[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
base64 = "0.13"
lazy_static = "1.4"
aes = "0.8"
rand = "0.8"
sha1 = "0.10.5"
params = "0.8.0"
num-bigint = {version="0.4.3", features = ["rand"] }
byteorder = "1.4.3"
once_cell = "1.17"
sha256 = "1.1.1"
srp = {path = "../packages/srp"}
async-std = "1.12.0"